# aid

./: AGENTS.md  Cargo.toml  README.md  justfile
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  handler.rs  lib.rs  poll_loop.rs  pool.rs  server.rs  socket.rs  state.rs
crates/server/testdata/: build_error.toml  config.toml  end_to_end.toml
crates/server/tests/: end_to_end.rs
src/: main.rs
