[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[package]
name = "aid"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agent = { path = "crates/agent" }
