[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

chrono.workspace = true
libc.workspace = true

[lints]
workspace = true
